--- a/docs/guides/configure-error-suppression.mdx
+++ b/docs/guides/configure-error-suppression.mdx
@@ -38,7 +38,7 @@ sampler.options.dynamical_decoupling.sequence_type = "XpXm"
 print(f">>> dynamical decoupling sequence to use: {sampler.options.dynamical_decoupling.sequence_type}")
 ```
 
-<CodeAssistantAdmonition
+<CodeAssistantAdmonition>
 Can't remember the right attributes? Try asking the Qiskit Code Assistant!
 * `# Enable dynamic decoupling for sampler with the "XpXm" sequence type`
 </CodeAssistantAdmonition>
