--- a/docs/migration-guides/local-simulators.mdx
+++ b/docs/migration-guides/local-simulators.mdx
@@ -58,7 +58,7 @@ Local testing mode does not have built-in error suppression or mitigation.  Inst
 
 With `qiskit-ibm-runtime` 0.22.0 or later, you can use local testing mode to replace cloud simulators. Depending on your needs, there are several ways to use local testing mode.  To use local testing mode, specify one of the fake backends in ``qiskit_ibm_runtime.fake_provider`` or specify a Qiskit Aer backend when instantiating a primitive or a session.
 
-### Guidance for Choosing a Simulator
+### Guidance for choosing a simulator
 
 If you are perpelexed by the multiple choie of simulators, feel free to refer the following table as a guide to the applicablity of the simulators. 
 
