--- a/docs/migration-guides/local-simulators.mdx
+++ b/docs/migration-guides/local-simulators.mdx
@@ -68,7 +68,7 @@ Use the following table to help choose a simulator.
 |---------------------|-------------------------------------------------|---------------------------------------------------|----------------------------------------------------|
 | **Purpose**         | Mimics specific IBM&reg; QPUs by using snapshots         | General-purpose, high-performance simulation      | Efficient simulation for Clifford circuits         |
 | **Noise Model**     | Automatically applies noise model from QPU snapshots | Custom or based on real QPU calibration data      | Ideal for noise-free simulations                   |
-| **Circuit Size**    | Limited to the capabilities of the mimicked QPU  | Capable of handling larger circuits               | Suitable for extremely large circuits (e.g., hundreds of qubits) |
+| **Circuit Size**    | Limited to the capabilities of the mimicked QPU  | Can handle larger circuits               | Suitable for very large circuits (hundreds of qubits) |
 | **Results**         | Moderate runtime for QPU-specific tests          | Lesser runtime for a wide range of simulations    | Extremely fast (suitable) for stabilizer circuits  |
 | **Use Case**        | Testing transpiler and QPU-specific behavior     | General development, custom noise models          | Large stabilizer circuits, error correction        |
 
