--- a/docs/guides/qiskit-code-assistant.mdx
+++ b/docs/guides/qiskit-code-assistant.mdx
@@ -9,52 +9,52 @@ Improve your quantum computing developer experience and learn best practices for
 
 Make programming quantum computers even easier with Qiskit Code Assistant, a generative AI code assistant powered by [watsonx](watsonx.ai). Trained with approximately 370 million text tokens from Qiskit SDK v1.x, years of Qiskit code examples, and IBM Quantum features, Qiskit Code Assistant helps your quantum development workflow by offering LLM-generated suggestions based on [IBM Granite 8B Code](https://www.ibm.com/products/watsonx-ai/foundation-models) that incorporate the latest features and functionalities from IBM.
 
-<Admonition type="note">
-    This is an experimental feature available only to the IBM Quantum Premium Plan.
-    The Qiskit Code Assistant is in preview release status, subject to change.
+<Admonition type="note" title="Notes">
+    - This is an experimental feature available only to IBM Quantum&trade; Premium Plan users.
+    - The Qiskit Code Assistant is in preview release status and is subject to change.
     If you have feedback or want to contact the developer team, please use this [Qiskit Slack Workspace channel](https://qiskit.enterprise.slack.com/archives/C07LYA6PL83) or the related public GitHub repositories.
 </Admonition>
 
 ## Features
 
-* Accelerate Qiskit code generation by leveraging generative AI based on the `granite-8b-qiskit` model
-* Use abstract and specific prompts to generate recommendations
-* Manage code changes by reviewing, accepting, and rejecting suggestions
-* Supports Python code and Jupyter notebook files
-* Extensions available for [VSCode](https://code.visualstudio.com/) and [JupyterLab](https://jupyterlab.readthedocs.io/en/latest/)
-* Includes guardrails to avoid answering questions that represent a potential risk (hateful speech, etc).
+* Accelerate Qiskit code generation by leveraging generative AI based on the `granite-8b-qiskit` model.
+* Use abstract and specific prompts to generate recommendations.
+* Manage code changes by reviewing, accepting, and rejecting suggestions.
+* Supports Python code and Jupyter notebook files.
+* Extensions available for [Visual Studio Code](https://code.visualstudio.com/) (VS Code) and [JupyterLab.](https://jupyterlab.readthedocs.io/en/latest/)
+* Includes guardrails to avoid answering questions that represent a potential risk, such as hateful speech.
 
-## Installing the extensions
+## Install the extensions
 
-The Qiskit Code Assistant can be integrated directly into your favorite development environment through the official extensions for JupyterLab and VSCode.
+Use  the official extensions for JupyterLab and VSCode to integrate Qiskit Code Assistant directly into your  development environment.
 
-### Installing JupyterLab extension
+### Install the JupyterLab extension
 
-To install the [JupyterLab extension](https://github.com/Qiskit/qiskit-code-assistant-jupyterlab), just run
+To install the [JupyterLab extension](https://github.com/Qiskit/qiskit-code-assistant-jupyterlab), run the following command from a terminal:
 ```sh
 pip install qiskit-code-assistant-jupyterlab
 ```
 
-After installing the extension, proceed as usual to run JupyterLab
+After installing the extension, start JupyterLab:
 
 ```sh
 jupyter lab
 ```
 
-The extension will load automatically and will be shown in the JupyterLab graphical user interface.
+The extension loads automatically and is listed on the bottom of the JupyterLab window.
 
-![../\_images/run/qiskit\-code\-assistant\jupyterlab\-selected\-model.png](/images/run/qiskit-code-assistant/jupyterlab-selected-model.png)
+![Screenshot of the bar on the bottom of JupyterLab.](/images/run/qiskit-code-assistant/jupyterlab-selected-model.png)
 
-If you need help to install or run JupyterLab, please refer to the [JupyterLab documentation](https://jupyterlab.readthedocs.io/en/latest/)
+For help working with JupyterLab, refer to the [JupyterLab documentation.](https://jupyterlab.readthedocs.io/en/latest/)
 
-### Installing the VSCode extension
+### Install the VSCode extension
 
-To install the [VSCode extension](https://github.com/Qiskit/qiskit-code-assistant-vscode), you can add it to your IDE as follows:
+To install the [VSCode extension](https://github.com/Qiskit/qiskit-code-assistant-vscode), follow these steps:
 
-1. Launch Visual Studio Code
-1. Click on the Extensions tab
+1. Launch VS Code.
+1. Click the Extensions icon in the left toolbar.
 1. Search for `qiskit-vscode`
-1. Click **Install** for the "Qiskit Code Assistant"
+1. Find "Qiskit Code Assistant" and click **Install**.
 
 The extension is also available through the [VSCode Marketplace](https://marketplace.visualstudio.com/items?itemName=qiskit.qiskit-vscode).
 
@@ -63,7 +63,7 @@ After installing, you will need to reload the extension/IDE (typically VSCode wi
 ![../\_images/run/qiskit\-code\-assistant\vscode\-selected\-model.png](/images/run/qiskit-code-assistant/vscode-selected-model.png)
 
 
-## First steps using the Qiskit Code Assistant
+## Get started using the Qiskit Code Assistant
 
 ### Authentication and setup
 
@@ -77,7 +77,7 @@ The first time you use the `granite-8b-qiskit` model a modal info view will open
 
 ![../\_images/run/qiskit\-code\-assistant\eula.png](/images/run/qiskit-code-assistant/eula.png)
 
-### Using the Code Generation
+### Generate code
 
 #### JupyterLab
 
@@ -119,7 +119,7 @@ text to use the pop-up toolbar to cycle through the suggestions.
 ![../\_images/run/qiskit\-code\-assistant\vscode-inline-suggestion-toolbar.png](/images/run/qiskit-code-assistant/vscode-inline-suggestion-toolbar.png)
 
 
-## Configuring extension settings
+## Configure extension settings
 
 ### JupyterLab
 
@@ -153,7 +153,7 @@ Available configurations:
 3. [Advanced] To change the instance of the Qiskit Code Assistant Service that the extension should use you can edit the `Qiskit Code Assistant: Url` in the User Settings
 
 
-## Uninstalling the extensions
+## Uninstall the extensions
 
 ### JupyterLab
 
