--- a/docs/guides/ai-transpiler-passes.mdx
+++ b/docs/guides/ai-transpiler-passes.mdx
@@ -1,5 +1,5 @@
 ---
-title: AI transpiler passes
+title: AI-powered transpiler passes
 description: What are the AI transpiler passes and how to use them
 ---
 
@@ -10,7 +10,7 @@ The AI-powered transpiler passes are experimental passes that work as a drop-in 
 
 <Admonition type="note">
     This is an experimental feature available only to the IBM Quantum Premium Plan.
-    The AI-powered transpiler passes are in beta release status, subject to change.
+    The AI-powered transpiler passes are in preview release status, subject to change.
     If you have feedback or want to contact the developer team, please use this [Qiskit Slack Workspace channel](https://qiskit.slack.com/archives/C06KF8YHUAU).
 </Admonition>
 
@@ -102,6 +102,9 @@ The following custom collection passes for Cliffords, Linear Functions and Permu
 
 These custom collection passes limit the sizes of the collected sub-circuits so they are supported by the AI-powered synthesis passes. Therefore, it is recommended to use them after the routing passes and before the synthesis passes for a better overall optimization.
 
+## Limits
+
+Refer to the [Qiskit Transpiler Service documentatione](./qiskit-transpiler-service#install-transpiler-service) to know more about the limits that apply to the AI-powered transpiler passes.
 
 ## Citation
 
